handle if no cart & cart without burgers

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -10,11 +10,11 @@ $screen-lg: 992px;
 $screen-xl: 1600px;
 :root {
     --baseFontSize: 14px;
-    --primary: #7B8CDE;
-    --secondary: #F4743B;
+    --primary: #F4743B;
+    --secondary: #04A777;
     --info: #e5cb7a;
-    --error: #ec3521;
-    --success: #32c704;
+    --error: #F64740;
+    --success: #9BE564;
 }
 
 .title {
